updated yaml file name

--- a/.github/workflows/deploy-todo-frontend.yml
+++ b/.github/workflows/deploy-todo-frontend.yml
@@ -32,8 +32,12 @@ jobs:
             --cache-control "max-age=60"
 
       - name: Invalidate CloudFront cache for /todo/*
-        if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID != '' }}
         run: |
+          if [ -z "${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}" ]; then
+            echo "CLOUDFRONT_DISTRIBUTION_ID not set, skipping invalidation."
+            exit 0
+          fi
+
           aws cloudfront create-invalidation \
             --distribution-id "${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}" \
             --paths "/todo/*"
