--- a/.github/workflows/deploy-todo-frontend.yml
+++ b/.github/workflows/deploy-todo-frontend.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main]
     paths:
-      - "frontend/**"
+      - "Frontend/**"
       - ".github/workflows/deploy-todo-frontend.yml"
 
 jobs:
